# incident-intel

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.json
.github/workflows/: ci-backend.yml  ci-frontend.yml  ci.yml
migrations/: env.py
migrations/versions/: 60c303fdc3e3_add_content_tsv_generated_column_to_.py  6d0a95e36f33_add_message_id_column_to_querylog_with_.py  86367b319221_add_started_at_and_closed_at_to_tickets.py  87ac12c3e8f2_initial_schema_create_all_tables.py  893e862bb9cb_stadartize_ticket_enums_to_lowcase.py  d8ffa5314aa5_add_server_defaults_to_services_sla_.py
scripts/: seed.py  seed_scenarios.py  test_models_smoke.py
src/incident_intel/: exceptions.py  main.py
src/incident_intel/api/: health.py
src/incident_intel/api/v1/: chat.py  conversations.py  documents.py  search.py  services.py  tickets.py
src/incident_intel/core/: database.py  logging.py  redis.py
src/incident_intel/llm/: __init__.py  openai_provider.py  provider.py
src/incident_intel/middleware/: request_id.py
src/incident_intel/models/: __init__.py  base.py  conversation.py  document.py  query_log.py  query_source.py  review.py  service.py  ticket.py  ticket_document.py  ticket_documents.py  tickets.py
src/incident_intel/schemas/: __init__.py  chat.py  classification.py  conversation.py  document.py  search.py  service.py  ticket.py
src/incident_intel/services/: chat_service.py  classification_service.py  conversation_service.py  dispatch.py  document_service.py  embedding_service.py  search_service.py  service_service.py  sql_query_service.py  ticket_service.py
tests/: conftest.py
tests/integration/: test_chat_api.py  test_conversation_api.py  test_document_embeddings.py  test_documents_api.py  test_search_api.py  test_services_api.py  test_sql_query_service.py  test_tickets_api.py
tests/unit/api/: test_health.py
tests/unit/llm/: test_openai_provider.py
tests/unit/services/: test_chat_service.py  test_classification_service.py  test_conversation_service.py  test_dispatch.py  test_document_service.py  test_embedding_service.py  test_search_service.py  test_sql_query_service.py  test_ticket_service.py
ui/: eslint.config.js  package-lock.json  package.json  tsconfig.app.json  vercel.json  vite.config.ts
ui/src/: App.tsx  config.ts  main.tsx
ui/src/components/: AppLayout.tsx  ConversationSidebar.tsx  DeleteConfirmDialog.tsx  DescriptionItem.tsx  DocumentCard.tsx  EmptyState.tsx  ErrorBoundary.tsx  LoadingSkeleton.tsx  Markdown.tsx  PaginationControls.tsx  RelevanceBadge.tsx  ThemeProvider.tsx  TicketCard.tsx  TicketForm.tsx
ui/src/components/ui/: sonner.tsx
ui/src/hooks/: useConversation.ts  useConversations.ts  useServices.ts  useTicket.ts  useTicketMutations.ts
ui/src/lib/: apiClient.test.ts  apiClient.ts  constants.ts  errors.ts  queryKeys.ts  sse.test.ts  sse.ts  ticketTransitions.test.ts  ticketTransitions.ts  toast.ts  useChatStream.test.ts  useChatStream.ts
ui/src/pages/: ChatPage.test.tsx  ChatPage.tsx  DocumentDetailPage.tsx  DocumentsPage.tsx  NotFoundPage.tsx  SearchPage.tsx  TicketCreatePage.tsx  TicketDetailPage.tsx  TicketEditPage.tsx  TicketsPage.tsx
ui/src/schemas/: tickets.ts
ui/src/types/: api.ts  chat.ts
ui/src/utils/: colors.ts  formatTimestamp.ts  relevance.ts
(+14 files in other folders)
